# YololTranslator

./: .gitignore  CMakeLists.txt  README.md  bot.dockerfile  core.dockerfile  discord_bot.py  main.cpp  run_api.sh  run_bot.sh  setup.py  sound_dico.txt  vcpkg.json  web.dockerfile  web_server.py  word_dico.txt
.github/workflows/: push-to-docker.yaml
api/: index.js
core/: CMakeLists.txt  Dockerfile  Yolol.py  vcpkg.json  yolol_service.py
core/assets/: fr.dict  french_config.json  french_dico.json  word_to_word_dict_fr.json
core/cmake/: Dependencies.cmake
core/src/: CMakeLists.txt  JsonUnserialiser.cpp  JsonUnserializer.hpp  PythonBindings.cpp  SharedInterace.cpp  SharedInterface.hpp  Translator.cpp  Translator.hpp
core/src/Phonem/: EquivalentChooser.hpp  Phonem.hpp  PhonemEquivalent.hpp  PhonemListToString.cpp  PhonemListToString.hpp  PhonemTranslation.hpp  TranslationState.hpp  WordToPhonems.cpp  WordToPhonems.hpp
core/src/WordToWord/: WordTranslations.cpp  WordTranslator.cpp  WordTranslator.hpp
core/src/utilities/: Random.hpp  Split.hpp
core/test/: CMakeLists.txt
core/test/Split/: CMakeLists.txt  main.cpp
core/test/Translator/: CMakeLists.txt  main.cpp
core/v1/: install_manifest.txt
core/v1/dico/: accent.dico  punctuation.dico  word.dico
core/v1/src/: SentenceTranslator.hpp  TranslatorManager.hpp  main.cpp
core/v2/: CMakeLists.txt  README.md
core/v2/assets/: fr.dict  french_dico.json  word_to_word_dict_fr.json
core/v2/gcc_build/: DartConfiguration.tcl  YololTranslatorCmd
core/v2/gcc_build/test/Split/: Split.test
core/v2/gcc_build/test/Translator/: Translator.test
core/v2/src/: CMakeLists.txt  JsonUnserializer.hpp  Phonem.hpp  PhonemComposition.hpp  PhonemCompositionList.cpp  PhonemCompositionList.hpp  PhonemList.cpp  PhonemList.hpp  SharedLibInterface.cpp  SharedLibInterface.hpp  Translator.cpp  Translator.hpp  WordToWordDict.cpp  WordToWordDict.hpp  WordsPhonemDictionnary.cpp  WordsPhonemDictionnary.hpp  main.cpp
core/v2/src/Phonem/: Phonem.hpp  PhonemEquivalent.hpp  PhonemList.cpp  PhonemList.hpp  PhonemListToString.cpp  PhonemListToString.hpp  WordToPhonems.cpp  WordToPhonems.hpp  WordsPhonemDictionnary.cpp  WordsPhonemDictionnary.hpp
core/v2/src/PhonemComposition/: PhonemComposition.hpp  PhonemCompositionList.cpp
core/v2/src/WordToWord/: WordToWordTranslator.hpp  WordTranslation.hpp  WordTranslations.hpp  WordTranslator.cpp
core/v2/src/WordToWordDict/: WordToWordDict.cpp
core/v2/src/utilities/: File.hpp  Split.hpp
core/v2/test/: CMakeLists.txt
core/v2/test/Split/: CMakeLists.txt  main.cpp
core/v2/test/Translator/: CMakeLists.txt
core/v2/test/boost_ut/: ut.hpp
core/v3/: CMakeLists.txt  note.md  test_main.cpp
core/v3/assets/: fr.dict  fr_epured.dict  french_dico.json
core/v3/code_generator/: generate.py
core/v3/lib/: CMakeLists.txt  EquivalentChooser.hpp  Phonem.hpp  PhonemCompositionTranslation.hpp  PhonemEquivalent.hpp  PhonemList.hpp  PhonemListToString.hpp  PhonemTranslation.hpp  Random.hpp  StaticMap.hpp  TranslationState.hpp  Translator.cpp  Translator.hpp  TranslatorCallable.hpp  WordToPhonems.hpp  WordTranslations.hpp  WordTranslator.hpp
core/v3/src/: Translator.hpp  main.cpp
dico/: accent.dico  double_letter.dico  punctuation.dico  sound.dico  special_char.dico  terminaison.dico  word.dico  word_dico.txt
discord-bot/: CMakeLists.txt  index.js  package-lock.json  package.json
discord-bot/bash_scripts/: ping.sh  stop.sh
discord-bot/src/: Command.hpp  main.cpp
discord-bot/test/: command_parsing.cpp
discord_bot/: index.js  package-lock.json  package.json
gui_client/FlutterApp/yolol_translator/: README.md  pubspec.yaml
gui_client/FlutterApp/yolol_translator/android/app/: build.gradle
gui_client/FlutterApp/yolol_translator/android/app/src/main/: AndroidManifest.xml
gui_client/FlutterApp/yolol_translator/android/app/src/main/kotlin/com/example/yolol_translator/: MainActivity.kt
gui_client/FlutterApp/yolol_translator/android/app/src/profile/: AndroidManifest.xml
gui_client/FlutterApp/yolol_translator/ios/Runner/: Info.plist
gui_client/FlutterApp/yolol_translator/ios/Runner.xcodeproj/: project.pbxproj
gui_client/FlutterApp/yolol_translator/lib/: main.dart
gui_client/FlutterApp/yolol_translator/test/: widget_test.dart
gui_client/UnityApp/YololTranslator/Assets/: InputFieldHandler.cs
gui_client/UnityApp/YololTranslator/Assets/Scenes/: SampleScene.unity
gui_client/UnityApp/YololTranslator/ProjectSettings/: ProjectSettings.asset
gui_client/UnityApp/YololTranslator/YololTranslator_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
gui_client/python/: README.md  YololTranslate.py
nodejs_sdk/: YololSDK.js
public/: index.html  style.css  yolol.js
src/: InsertionOrderMap.hpp  SentenceTranslator.hpp  StringFunction.hpp  Translator.hpp  TranslatorManager.hpp  main.cpp
v2/implementation/: CMakeLists.txt
v2/implementation/assets/: fr.dict  french_dico.json  word_to_word_dict_fr.json
v2/implementation/src/: CharsEquivalent.hpp  Translator.cpp  Translator.hpp  main.cpp
v2/implementation/src/Phonem/: Phonem.hpp  PhonemList.cpp  PhonemList.hpp  WordsPhonemDictionnary.cpp  WordsPhonemDictionnary.hpp
v2/implementation/src/PhonemComposition/: PhonemCompositionList.cpp  PhonemCompositionList.hpp
v2/implementation/src/WordToWordDict/: WordToWordDict.hpp
v2/research/: compile_get_phonem_listr.sh  french_dico.json  get_phonem_list.cpp  pas_evident_phonem.txt  words_to_phonems_main.cpp
web/: index.js  package-lock.json  package.json
web/bash_scripts/: deploy.sh  ping.sh
web/public/: index.html  style.css  yolol.js
